framec_tests/language_specific/csharp/v3_mir/positive/forward_parent.frm
@target csharp

system S {
    machine:
        $A => $P {
            e() {
                => $^
            }
        }
        $P { }
}
