framec_tests/language_specific/csharp/v3_mir/negative/forward_trailing_tokens.frm
@target csharp

system S {
    machine:
        $A {
            e() {
                => $^ extra
            }
        }
}

